AdminLog and check done

--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -20,7 +20,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbar">
 					<div class="navbar-nav">
-						<a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/user/list}"> USERS </a>
+						<a class="nav-link" sec:authorize="hasAuthority('ADMIN')" th:href="@{/user/list}"> USERS </a>
 						<a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/bidList/list}"> BID LIST </a>
 						<a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/curvePoint/list}"> CURVE POINT </a>
 						<a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/rating/list}"> RATING </a>
@@ -36,6 +36,13 @@
 		<div class="container">
 			<div class="row justify-content-md-center">
 				<div class="col-12 text-center">
+					<!-- error messages -->
+					<div th:if="${passwordError}" th:class="${alert}" >
+						<div class="alert alert-danger" th:text="${passwordError}" style="font-weight:750"></div>
+					</div>
+					<div th:if="${usernameError}" th:class="${alert}" >
+						<div class="alert alert-danger" th:text="${usernameError}" style="font-weight:750"></div>
+					</div>
 					<br>
 					<h3>Add New User</h3>
 					<br>
